feat: remove unused AB#18776

--- a/interfaces/IBF-dashboard/src/theme/variables.scss
+++ b/interfaces/IBF-dashboard/src/theme/variables.scss
@@ -6,67 +6,10 @@
 // custom font
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 
+@import 'ibf-colors';
+
 :root {
   --ion-font-family: 'Montserrat', sans-serif;
-
-  --ion-color-ibf-no-alert-primary: #011e41;
-  --ion-color-ibf-no-alert-primary-rgb: 1, 30, 65;
-  --ion-color-ibf-no-alert-primary-contrast: #ffffff;
-  --ion-color-ibf-no-alert-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-ibf-no-alert-primary-shade: #011b3b;
-  --ion-color-ibf-no-alert-primary-tint: #1a3554;
-
-  --ion-color-ibf-no-alert-secondary: #b3bcd0;
-  --ion-color-ibf-no-alert-secondary-rgb: 179, 188, 208;
-  --ion-color-ibf-no-alert-secondary-contrast: #011e41;
-  --ion-color-ibf-no-alert-secondary-contrast-rgb: 1, 30, 65;
-  --ion-color-ibf-no-alert-secondary-shade: #a1a9bb;
-  --ion-color-ibf-no-alert-secondary-tint: #bbc3d5;
-
-  --ion-color-ibf-no-alert-tertiary: #e6e9f0;
-  --ion-color-ibf-no-alert-tertiary-rgb: 202, 208, 233;
-  --ion-color-ibf-no-alert-tertiary-contrast: #011e41;
-  --ion-color-ibf-no-alert-tertiary-contrast-rgb: 1, 30, 65;
-  --ion-color-ibf-no-alert-tertiary-shade: #b5bbd1;
-  --ion-color-ibf-no-alert-tertiary-tint: #cfd4eb;
-
-  --ion-color-ibf-trigger-alert-primary: #6200ee;
-  --ion-color-ibf-trigger-alert-primary-rgb: 98, 0, 238;
-  --ion-color-ibf-trigger-alert-primary-contrast: #ffffff;
-  --ion-color-ibf-trigger-alert-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-ibf-trigger-alert-primary-shade: #5800d6;
-  --ion-color-ibf-trigger-alert-primary-tint: #721af0;
-
-  --ion-color-ibf-trigger-alert-secondary: #d0b3fa;
-  --ion-color-ibf-trigger-alert-secondary-rgb: 98, 0, 238;
-  --ion-color-ibf-trigger-alert-secondary-contrast: #000000;
-  --ion-color-ibf-trigger-alert-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-trigger-alert-secondary-shade: #bba1e1;
-  --ion-color-ibf-trigger-alert-secondary-tint: #d5bbfb;
-
-  --ion-color-ibf-trigger-alert-tertiary: #ebe1f8;
-  --ion-color-ibf-trigger-alert-tertiary-rgb: 98, 0, 238;
-  --ion-color-ibf-trigger-alert-tertiary-contrast: #6200ee;
-  --ion-color-ibf-trigger-alert-tertiary-contrast-rgb: 98, 0, 238;
-  --ion-color-ibf-trigger-alert-tertiary-shade: #d4cbdf;
-  --ion-color-ibf-trigger-alert-tertiary-tint: #ede4f9;
-
-  --ion-color-ibf-white: #ffffff;
-  --ion-color-ibf-white-rgb: 255, 255, 255;
-  --ion-color-ibf-white-contrast: #011e41;
-  --ion-color-ibf-white-contrast-rgb: 1, 30, 65;
-  --ion-color-ibf-white-shade: #e5e5e4;
-  --ion-color-ibf-white-tint: #ffffff;
-
-  /** ibf-black **/
-  --ion-color-ibf-black: #000000;
-  --ion-color-ibf-black-rgb: 0, 0, 0;
-  --ion-color-ibf-black-contrast: #ffffff;
-  --ion-color-ibf-black-contrast-rgb: 255, 255, 255;
-  --ion-color-ibf-black-shade: #000000;
-  --ion-color-ibf-black-tint: #1a1a1a;
-
-  --ion-color-ibf-grey: #c2c2c2;
 
   --ion-color-ibf-primary: var(--ion-color-ibf-trigger-alert-primary);
   --ion-color-ibf-primary-rgb: var(--ion-color-ibf-trigger-alert-primary-rgb);
@@ -348,145 +291,6 @@
 
   /** ----------------------------------- **/
 
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
-
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
-
-  /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
-
-  /** success **/
-  --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
-
-  /** warning **/
-  --ion-color-warning: #ffc409;
-  --ion-color-warning-rgb: 255, 196, 9;
-  --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac08;
-  --ion-color-warning-tint: #ffca22;
-
-  /** danger **/
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
-
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
-
-  /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
-
-  /** ibf-white-text **/
-  --ion-color-ibf-white-text: #ffffff;
-  --ion-color-ibf-white-text-rgb: 255, 255, 255;
-  --ion-color-ibf-white-text-contrast: #000000;
-  --ion-color-ibf-white-text-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-white-text-shade: #e5e5e4;
-  --ion-color-ibf-white-text-tint: #ffffff;
-
-  /** ibf-gray **/
-  --ion-color-ibf-gray: #bdbeba;
-  --ion-color-ibf-gray-rgb: 189, 190, 186;
-  --ion-color-ibf-gray-contrast: #000000;
-  --ion-color-ibf-gray-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-gray-shade: #aaaba7;
-  --ion-color-ibf-gray-tint: #c3c4c0;
-
-  /** ibf-gray-light **/
-  --ion-color-ibf-gray-light: #e5e5e5;
-  --ion-color-ibf-gray-light-rgb: 229, 229, 229;
-  --ion-color-ibf-gray-light-contrast: #000000;
-  --ion-color-ibf-gray-light-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-gray-light-shade: #cecece;
-  --ion-color-ibf-gray-light-tint: #e7e7e7;
-
-  /** ibf-dark-blue **/
-  --ion-color-ibf-dark-blue: #3b5390;
-  --ion-color-ibf-dark-blue-rgb: 59, 83, 144;
-  --ion-color-ibf-dark-blue-contrast: #ffffff;
-  --ion-color-ibf-dark-blue-contrast-rgb: 255, 255, 255;
-  --ion-color-ibf-dark-blue-shade: #354a81;
-  --ion-color-ibf-dark-blue-tint: #4e649b;
-
-  /** ibf-light-blue **/
-  --ion-color-ibf-light-blue: #cad0e9;
-  --ion-color-ibf-light-blue-rgb: 202, 208, 233;
-  --ion-color-ibf-light-blue-contrast: #000000;
-  --ion-color-ibf-light-blue-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-light-blue-shade: #b5bbd1;
-  --ion-color-ibf-light-blue-tint: #cfd4eb;
-
-  /** ibf-salmon **/
-  --ion-color-ibf-salmon: #de9584;
-  --ion-color-ibf-salmon-rgb: 222, 149, 132;
-  --ion-color-ibf-salmon-contrast: #000000;
-  --ion-color-ibf-salmon-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-salmon-shade: #c78676;
-  --ion-color-ibf-salmon-tint: #e19f90;
-
-  /** ibf-salmon-light **/
-  --ion-color-ibf-salmon-light: #e7cdc3;
-  --ion-color-ibf-salmon-light-rgb: 231, 205, 195;
-  --ion-color-ibf-salmon-light-contrast: #000000;
-  --ion-color-ibf-salmon-light-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-salmon-light-shade: #cfb8af;
-  --ion-color-ibf-salmon-light-tint: #e9d2c9;
-
-  /** ibf-yellow **/
-  --ion-color-ibf-yellow: #feff02;
-  --ion-color-ibf-yellow-rgb: 254, 255, 2;
-  --ion-color-ibf-yellow-contrast: #000000;
-  --ion-color-ibf-yellow-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-yellow-shade: #feff02;
-  --ion-color-ibf-yellow-tint: #feff02;
-
-  /** ibf-orange **/
-  --ion-color-ibf-orange: #fcb50c;
-  --ion-color-ibf-orange-rgb: 252, 181, 12;
-  --ion-color-ibf-orange-contrast: #000000;
-  --ion-color-ibf-orange-contrast-rgb: 0, 0, 0;
-  --ion-color-ibf-orange-shade: #fcb50c;
-  --ion-color-ibf-orange-tint: #fcb50c;
-
-  /** ibf-outline-red **/
-  --ion-color-ibf-outline-red: #c22400;
-
   ion-button {
     text-transform: none;
   }
@@ -619,65 +423,11 @@
   --ion-color-tint: var(--ion-color-ibf-black-tint);
 }
 
-.ion-color-ibf-white-text {
-  --ion-color-base: var(--ion-color-ibf-white-text);
-  --ion-color-base-rgb: var(--ion-color-ibf-white-text-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-white-text-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-white-text-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-white-text-shade);
-  --ion-color-tint: var(--ion-color-ibf-white-text-tint);
-}
-
-.ion-color-ibf-gray {
-  --ion-color-base: var(--ion-color-ibf-gray);
-  --ion-color-base-rgb: var(--ion-color-ibf-gray-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-gray-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-gray-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-gray-shade);
-  --ion-color-tint: var(--ion-color-ibf-gray-tint);
-}
-
-.ion-color-ibf-gray-light {
-  --ion-color-base: var(--ion-color-ibf-gray-light);
-  --ion-color-base-rgb: var(--ion-color-ibf-gray-light-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-gray-light-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-gray-light-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-gray-light-shade);
-  --ion-color-tint: var(--ion-color-ibf-gray-light-tint);
-}
-
-.ion-color-ibf-dark-blue {
-  --ion-color-base: var(--ion-color-ibf-dark-blue);
-  --ion-color-base-rgb: var(--ion-color-ibf-dark-blue-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-dark-blue-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-dark-blue-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-dark-blue-shade);
-  --ion-color-tint: var(--ion-color-ibf-dark-blue-tint);
-}
-
-.ion-color-ibf-light-blue {
-  --ion-color-base: var(--ion-color-ibf-light-blue);
-  --ion-color-base-rgb: var(--ion-color-ibf-light-blue-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-light-blue-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-light-blue-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-light-blue-shade);
-  --ion-color-tint: var(--ion-color-ibf-light-blue-tint);
-}
-
-.ion-color-ibf-salmon {
-  --ion-color-base: var(--ion-color-ibf-salmon);
-  --ion-color-base-rgb: var(--ion-color-ibf-salmon-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-salmon-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-salmon-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-salmon-shade);
-  --ion-color-tint: var(--ion-color-ibf-salmon-tint);
-}
-
-.ion-color-ibf-salmon-light {
-  --ion-color-base: var(--ion-color-ibf-salmon-light);
-  --ion-color-base-rgb: var(--ion-color-ibf-salmon-light-rgb);
-  --ion-color-contrast: var(--ion-color-ibf-salmon-light-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-ibf-salmon-light-contrast-rgb);
-  --ion-color-shade: var(--ion-color-ibf-salmon-light-shade);
-  --ion-color-tint: var(--ion-color-ibf-salmon-light-tint);
+.ion-color-ibf-grey {
+  --ion-color-base: var(--ion-color-ibf-grey);
+  --ion-color-base-rgb: var(--ion-color-ibf-grey-rgb);
+  --ion-color-contrast: var(--ion-color-ibf-grey-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-ibf-grey-contrast-rgb);
+  --ion-color-shade: var(--ion-color-ibf-grey-shade);
+  --ion-color-tint: var(--ion-color-ibf-grey-tint);
 }
