feat: align frontend AB#18777

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 <ion-item lines="none" class="ion-no-padding">
   <ion-progress-bar
     type="indeterminate"
-    color="ibf-gray"
+    color="ibf-grey"
     class="ion-margin"
     *ngIf="timelineState.timeStepButtons.length < 1"
   ></ion-progress-bar>
