--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -43,7 +43,7 @@
     flex-direction: row;
 
     .alert-button-role-cancel {
-      color: var(--ion-color-ibf-gray);
+      color: var(--ion-color-ibf-grey);
     }
 
     .no-trigger-scenario-button {
