--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -15,7 +15,7 @@
     </ion-header>
   </ion-menu-toggle>
   <ion-content>
-    <ion-list color="dark" class="ion-no-padding">
+    <ion-list class="ion-no-padding">
       <ion-item
         [class.ion-hide]="!isDev"
         href="https://github.com/rodekruis/IBF-system/releases/tag/{{
@@ -36,7 +36,7 @@
         class="ion-align-items-center"
       ></app-backend-mock-scenario>
     </ion-list>
-    <ion-list color="dark" class="ion-no-padding" [class.ion-hide]="!isDev">
+    <ion-list class="ion-no-padding" [class.ion-hide]="!isDev">
       <ion-item
         href="/log"
         lines="full"
