--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -6,7 +6,9 @@
         [innerHtml]="
           'chat-component.' +
             disasterTypeName +
-            '.event-switcher.current-event-message' | translate
+            '.event-switcher.current-event-message' | translate : {
+              eventName: event?.eventName
+            }
         "
       ></strong>
     </p>
@@ -26,7 +28,9 @@
         [innerHtml]="
           'chat-component.' +
             disasterTypeName +
-            '.event-switcher.current-event-message' | translate
+            '.event-switcher.current-event-message' | translate : {
+              eventName: event?.eventName
+            }
         "
       ></span>
       <ion-icon name="arrow-back" slot="start"></ion-icon>
