fix: prettier AB#18777

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -65,7 +65,11 @@
           <app-timestamp class="ion-margin-end"></app-timestamp>
         </ion-card>
         <ion-card class="ibf-login-card">
-          <ion-icon name="person" class="person" color="ibf-no-alert-primary"></ion-icon>
+          <ion-icon
+            name="person"
+            class="person"
+            color="ibf-no-alert-primary"
+          ></ion-icon>
           <ion-card-content>
             <app-login-form></app-login-form>
           </ion-card-content>
