--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/_index.scss
@@ -25,21 +25,27 @@
   --ion-color-ibf-trigger-alert-primary: var(--fiveten-purple-800);
   --ion-color-ibf-trigger-alert-primary-rgb: var(--fiveten-purple-800-rgb);
   --ion-color-ibf-trigger-alert-primary-contrast: var(--fiveten-neutral-000);
-  --ion-color-ibf-trigger-alert-primary-contrast-rgb: var(--fiveten-neutral-000-rgb);
+  --ion-color-ibf-trigger-alert-primary-contrast-rgb: var(
+    --fiveten-neutral-000-rgb
+  );
   --ion-color-ibf-trigger-alert-primary-shade: var(--fiveten-purple-900);
   --ion-color-ibf-trigger-alert-primary-tint: var(--fiveten-purple-700);
 
   --ion-color-ibf-trigger-alert-secondary: var(--fiveten-purple-300);
   --ion-color-ibf-trigger-alert-secondary-rgb: var(--fiveten-purple-300-rgb);
   --ion-color-ibf-trigger-alert-secondary-contrast: var(--fiveten-purple-900);
-  --ion-color-ibf-trigger-alert-secondary-contrast-rgb: var(--fiveten-purple-900-rgb);
+  --ion-color-ibf-trigger-alert-secondary-contrast-rgb: var(
+    --fiveten-purple-900-rgb
+  );
   --ion-color-ibf-trigger-alert-secondary-shade: var(--fiveten-purple-700);
   --ion-color-ibf-trigger-alert-secondary-tint: var(--fiveten-purple-200);
 
   --ion-color-ibf-trigger-alert-tertiary: var(--fiveten-purple-100);
   --ion-color-ibf-trigger-alert-tertiary-rgb: var(--fiveten-purple-100-rgb);
   --ion-color-ibf-trigger-alert-tertiary-contrast: var(--fiveten-purple-900);
-  --ion-color-ibf-trigger-alert-tertiary-contrast-rgb: var(--fiveten-purple-900-rgb);
+  --ion-color-ibf-trigger-alert-tertiary-contrast-rgb: var(
+    --fiveten-purple-900-rgb
+  );
   --ion-color-ibf-trigger-alert-tertiary-shade: var(--fiveten-purple-200);
   --ion-color-ibf-trigger-alert-tertiary-tint: var(--fiveten-neutral-000);
 
