--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
@@ -1,91 +1,91 @@
 :root {
-  --fiveten-navy-100: #F2F5FD;
-  --fiveten-navy-200: #D6E0FA;
-  --fiveten-navy-300: #A0B6EB;
-  --fiveten-navy-700: #0E357B;
-  --fiveten-navy-800: #00214D;
+  --fiveten-navy-100: #f2f5fd;
+  --fiveten-navy-200: #d6e0fa;
+  --fiveten-navy-300: #a0b6eb;
+  --fiveten-navy-700: #0e357b;
+  --fiveten-navy-800: #00214d;
   --fiveten-navy-900: #001229;
 
-  --fiveten-purple-100: #F3F0FF;
-  --fiveten-purple-200: #D0C0FF;
-  --fiveten-purple-300: #AD92FE;
-  --fiveten-purple-700: #5A32FD;
-  --fiveten-purple-800: #4F22D7;
-  --fiveten-purple-900: #30128C;
+  --fiveten-purple-100: #f3f0ff;
+  --fiveten-purple-200: #d0c0ff;
+  --fiveten-purple-300: #ad92fe;
+  --fiveten-purple-700: #5a32fd;
+  --fiveten-purple-800: #4f22d7;
+  --fiveten-purple-900: #30128c;
 
-  --fiveten-neutral-000: #FFFFFF;
-  --fiveten-neutral-100: #F4F7FA;
-  --fiveten-neutral-200: #DCE1E7;
-  --fiveten-neutral-300: #9FA9B4;
-  --fiveten-neutral-600: #58626D;
-  --fiveten-neutral-800: #2C3136;
-  --fiveten-neutral-900: #0F1218;
+  --fiveten-neutral-000: #ffffff;
+  --fiveten-neutral-100: #f4f7fa;
+  --fiveten-neutral-200: #dce1e7;
+  --fiveten-neutral-300: #9fa9b4;
+  --fiveten-neutral-600: #58626d;
+  --fiveten-neutral-800: #2c3136;
+  --fiveten-neutral-900: #0f1218;
 
-  --fiveten-success-100: #E9F1ED;
-  --fiveten-success-200: #BFD5CB;
-  --fiveten-success-300: #7EAC96;
-  --fiveten-success-500: #3E8262;
+  --fiveten-success-100: #e9f1ed;
+  --fiveten-success-200: #bfd5cb;
+  --fiveten-success-300: #7eac96;
+  --fiveten-success-500: #3e8262;
   --fiveten-success-700: #295741;
-  --fiveten-success-800: #152B21;
+  --fiveten-success-800: #152b21;
 
-  --fiveten-warning-100: #FEF3E6;
-  --fiveten-warning-200: #FEE9D1;
-  --fiveten-warning-300: #FAB666;
-  --fiveten-warning-500: #F0890D;
-  --fiveten-warning-700: #AA6009;
+  --fiveten-warning-100: #fef3e6;
+  --fiveten-warning-200: #fee9d1;
+  --fiveten-warning-300: #fab666;
+  --fiveten-warning-500: #f0890d;
+  --fiveten-warning-700: #aa6009;
   --fiveten-warning-800: #704410;
 
-  --fiveten-error-100: #FAEBEF;
-  --fiveten-error-200: #F3D2DB;
-  --fiveten-error-300: #E08EA6;
-  --fiveten-error-500: #C21E4D;
-  --fiveten-error-700: #6E112C;
-  --fiveten-error-800: #410A1a;
+  --fiveten-error-100: #faebef;
+  --fiveten-error-200: #f3d2db;
+  --fiveten-error-300: #e08ea6;
+  --fiveten-error-500: #c21e4d;
+  --fiveten-error-700: #6e112c;
+  --fiveten-error-800: #410a1a;
 
-  --fiveten-link-700: #124AD6;
+  --fiveten-link-700: #124ad6;
 
-  --fiveten-navy-100-rgb: 242,245,253;
-  --fiveten-navy-200-rgb: 214,224,250;
-  --fiveten-navy-300-rgb: 160,182,235;
-  --fiveten-navy-700-rgb: 14,53,123;
-  --fiveten-navy-800-rgb: 0,33,77;
-  --fiveten-navy-900-rgb: 0,18,41;
+  --fiveten-navy-100-rgb: 242, 245, 253;
+  --fiveten-navy-200-rgb: 214, 224, 250;
+  --fiveten-navy-300-rgb: 160, 182, 235;
+  --fiveten-navy-700-rgb: 14, 53, 123;
+  --fiveten-navy-800-rgb: 0, 33, 77;
+  --fiveten-navy-900-rgb: 0, 18, 41;
 
-  --fiveten-purple-100-rgb: 243,240,255;
-  --fiveten-purple-200-rgb: 208,192,255;
-  --fiveten-purple-300-rgb: 173,146,254;
-  --fiveten-purple-700-rgb: 90,50,253;
-  --fiveten-purple-800-rgb: 79,34,215;
-  --fiveten-purple-900-rgb: 48,18,140;
+  --fiveten-purple-100-rgb: 243, 240, 255;
+  --fiveten-purple-200-rgb: 208, 192, 255;
+  --fiveten-purple-300-rgb: 173, 146, 254;
+  --fiveten-purple-700-rgb: 90, 50, 253;
+  --fiveten-purple-800-rgb: 79, 34, 215;
+  --fiveten-purple-900-rgb: 48, 18, 140;
 
-  --fiveten-neutral-000-rgb: 255,255,255;
-  --fiveten-neutral-100-rgb: 244,247,250;
-  --fiveten-neutral-200-rgb: 220,225,231;
-  --fiveten-neutral-300-rgb: 159,169,180;
-  --fiveten-neutral-600-rgb: 88,98,109;
-  --fiveten-neutral-800-rgb: 44,49,54;
-  --fiveten-neutral-900-rgb: 15,18,24;
+  --fiveten-neutral-000-rgb: 255, 255, 255;
+  --fiveten-neutral-100-rgb: 244, 247, 250;
+  --fiveten-neutral-200-rgb: 220, 225, 231;
+  --fiveten-neutral-300-rgb: 159, 169, 180;
+  --fiveten-neutral-600-rgb: 88, 98, 109;
+  --fiveten-neutral-800-rgb: 44, 49, 54;
+  --fiveten-neutral-900-rgb: 15, 18, 24;
 
-  --fiveten-success-100-rgb: 233,241,237;
-  --fiveten-success-200-rgb: 191,213,203;
-  --fiveten-success-300-rgb: 126,172,150;
-  --fiveten-success-500-rgb: 62,130,98;
-  --fiveten-success-700-rgb: 41,87,65;
-  --fiveten-success-800-rgb: 21,43,33;
+  --fiveten-success-100-rgb: 233, 241, 237;
+  --fiveten-success-200-rgb: 191, 213, 203;
+  --fiveten-success-300-rgb: 126, 172, 150;
+  --fiveten-success-500-rgb: 62, 130, 98;
+  --fiveten-success-700-rgb: 41, 87, 65;
+  --fiveten-success-800-rgb: 21, 43, 33;
 
-  --fiveten-warning-100-rgb: 254,243,230;
-  --fiveten-warning-200-rgb: 254,233,209;
-  --fiveten-warning-300-rgb: 250,182,102;
-  --fiveten-warning-500-rgb: 240,137,13;
-  --fiveten-warning-700-rgb: 170,96,9;
-  --fiveten-warning-800-rgb: 112,68,16;
+  --fiveten-warning-100-rgb: 254, 243, 230;
+  --fiveten-warning-200-rgb: 254, 233, 209;
+  --fiveten-warning-300-rgb: 250, 182, 102;
+  --fiveten-warning-500-rgb: 240, 137, 13;
+  --fiveten-warning-700-rgb: 170, 96, 9;
+  --fiveten-warning-800-rgb: 112, 68, 16;
 
-  --fiveten-error-100-rgb: 250,235,239;
-  --fiveten-error-200-rgb: 243,210,219;
-  --fiveten-error-300-rgb: 224,142,166;
-  --fiveten-error-500-rgb: 194,30,77;
-  --fiveten-error-700-rgb: 110,17,44;
-  --fiveten-error-800-rgb: 65,10,26;
+  --fiveten-error-100-rgb: 250, 235, 239;
+  --fiveten-error-200-rgb: 243, 210, 219;
+  --fiveten-error-300-rgb: 224, 142, 166;
+  --fiveten-error-500-rgb: 194, 30, 77;
+  --fiveten-error-700-rgb: 110, 17, 44;
+  --fiveten-error-800-rgb: 65, 10, 26;
 
-  --fiveten-link-700-rgb: 18,74,214;
+  --fiveten-link-700-rgb: 18, 74, 214;
 }
