fix: school icon AB#18893

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -69,6 +69,9 @@
               [class.evacuation-center-layer]="
                 layer.name === IbfLayerName.evacuationCenters && layer.active
               "
+              [class.school-layer]="
+                layer.name === IbfLayerName.schools && layer.active
+              "
               [class.community-notification-layer]="
                 layer.name === IbfLayerName.communityNotifications &&
                 layer.active
