--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -58,6 +58,9 @@
             .evacuation-center-layer {
               background-image: url('../../../assets/markers/evacuation-center-icon.svg');
             }
+            .school-layer {
+              background-image: url('../../../assets/markers/school-icon.svg');
+            }
             .community-notification-layer {
               background-image: url('../../../assets/markers/community-notification-icon.svg');
             }
