--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -163,6 +163,9 @@
   height: 48px;
   background-color: var(--ion-color-ibf-no-alert-primary);
   color: white;
+  &.exposed {
+    background-color: var(--ion-color-ibf-trigger-alert-primary);
+  }
   padding-top: 7px;
   text-align: center;
   opacity: 0.7 !important;
@@ -174,6 +177,9 @@
   height: 60px;
   background-color: var(--ion-color-ibf-no-alert-primary);
   color: white;
+  &.exposed {
+    background-color: var(--ion-color-ibf-trigger-alert-primary);
+  }
   text-align: center;
   padding-top: 10px;
   box-sizing: border-box;
@@ -186,6 +192,9 @@
   height: 72px;
   background-color: var(--ion-color-ibf-no-alert-primary);
   color: white;
+  &.exposed {
+    background-color: var(--ion-color-ibf-trigger-alert-primary);
+  }
   text-align: center;
   padding-top: 20px;
   box-sizing: border-box;
@@ -198,6 +207,9 @@
   height: 966px;
   background-color: var(--ion-color-ibf-no-alert-primary);
   color: white;
+  &.exposed {
+    background-color: var(--ion-color-ibf-trigger-alert-primary);
+  }
   text-align: center;
   padding-top: 30px;
   box-sizing: border-box;
