--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
@@ -39,7 +39,7 @@
   --fiveten-error-200: #f3d2db;
   --fiveten-error-300: #e08ea6;
   --fiveten-error-500: #c21e4d;
-  --fiveten-error-700: #6e112c;
+  --fiveten-error-700: #8a0f32;
   --fiveten-error-800: #410a1a;
 
   --fiveten-link-700: #124ad6;
