--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -161,10 +161,10 @@
   border-radius: 24px;
   width: 48px;
   height: 48px;
-  background-color: var(--ion-color-ibf-no-alert-primary);
+  background-color: var(--fiveten-navy-700);
   color: white;
   &.exposed {
-    background-color: var(--ion-color-ibf-trigger-alert-primary);
+    background-color: var(--fiveten-error-500);
   }
   padding-top: 7px;
   text-align: center;
@@ -175,10 +175,10 @@
   border-radius: 30px;
   width: 60px;
   height: 60px;
-  background-color: var(--ion-color-ibf-no-alert-primary);
+  background-color: var(--fiveten-navy-700);
   color: white;
   &.exposed {
-    background-color: var(--ion-color-ibf-trigger-alert-primary);
+    background-color: var(--fiveten-error-500);
   }
   text-align: center;
   padding-top: 10px;
@@ -190,10 +190,10 @@
   border-radius: 36px;
   width: 72px;
   height: 72px;
-  background-color: var(--ion-color-ibf-no-alert-primary);
+  background-color: var(--fiveten-navy-700);
   color: white;
   &.exposed {
-    background-color: var(--ion-color-ibf-trigger-alert-primary);
+    background-color: var(--fiveten-error-500);
   }
   text-align: center;
   padding-top: 20px;
@@ -205,10 +205,10 @@
   border-radius: 48px;
   width: 96px;
   height: 966px;
-  background-color: var(--ion-color-ibf-no-alert-primary);
+  background-color: var(--fiveten-navy-700);
   color: white;
   &.exposed {
-    background-color: var(--ion-color-ibf-trigger-alert-primary);
+    background-color: var(--fiveten-error-500);
   }
   text-align: center;
   padding-top: 30px;
