fix: adjust misc colors AB#18700

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -11,12 +11,12 @@
         color="ibf-secondary"
       >
         <ion-col>
-          <ion-label class="areas-of-focus--title">
+          <ion-label class="areas-of-focus--title" color="ibf-black">
             <strong>
               {{ 'areas-of-focus-summary-component.title' | translate }}
             </strong>
           </ion-label>
-          <ion-label class="areas-of-focus--subtitle">
+          <ion-label class="areas-of-focus--subtitle" color="ibf-black">
             <ion-text style="font-size: 12px">
               {{ 'areas-of-focus-summary-component.aof-subtitle' | translate }}
             </ion-text>
@@ -33,6 +33,7 @@
         <ion-label class="areas-of-focus--subtitle">
           <ion-text
             style="font-size: 12px"
+            color="ibf-black"
             [title]="
               'areas-of-focus-summary-component.tasks-subtitle' | translate
             "
