--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -13,6 +13,7 @@
         >
           <ion-col class="ion-no-padding ion-no-margin ion-align-items-center">
             <ion-label
+              color="ibf-black"
               class="aggregates--title ion-no-margin"
               data-test="aggregate-title"
               [title]="
@@ -24,11 +25,9 @@
               "
             >
               <strong>
-                <ion-text
-                  [color]="isActiveAreas() ? 'ibf-primary' : 'ibf-black'"
-                  style="font-size: 20px"
-                  >{{ getNumberAreasExposed() }}</ion-text
-                >
+                <ion-text style="font-size: 20px">{{
+                  getNumberAreasExposed()
+                }}</ion-text>
                 <span style="color: var(--ion-color-ibf-black)">
                   {{ getLabelAreasExposed().headerLabel }}
                 </span>
