feat: load warning event same way as typhoon below-trigger AB#19429

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -57,7 +57,8 @@
           : {
               startDate: event.startDate,
               firstLeadTimeDate: event.firstLeadTimeDate,
-              eventName: event.eventName
+              eventName: event.eventName,
+              disasterTypeLabel: disasterTypeLabel
             }
     "
   ></p>
