--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.scss
@@ -30,3 +30,14 @@ ion-checkbox {
     cursor: pointer;
   }
 }
+
+.event-header {
+  font-weight: bold;
+  font-size: 14px !important;
+}
+
+.warning-icon {
+  float: left;
+  margin-right: 5px;
+  margin-top: 3px;
+}
