--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -126,7 +126,8 @@
   <ng-container
     *ngIf="event.eventName === selectedEvent && event.activeTrigger"
   >
-    <p *ngIf="event.thresholdReached"
+    <p
+      *ngIf="event.thresholdReached"
       [innerHTML]="
         'chat-component.' + disasterTypeName + '.active-event.overview'
           | translate
@@ -138,9 +139,12 @@
               }
       "
     ></p>
-    <p *ngIf="!event.thresholdReached"
+    <p
+      *ngIf="!event.thresholdReached"
       [innerHTML]="
-        'chat-component.' + disasterTypeName + '.active-event.overview-below-trigger'
+        'chat-component.' +
+          disasterTypeName +
+          '.active-event.overview-below-trigger'
           | translate
             : {
                 nrTriggeredAreas: areas.length,
@@ -168,7 +172,8 @@
         </p>
       </li>
     </ul>
-    <p *ngIf="event.thresholdReached"
+    <p
+      *ngIf="event.thresholdReached"
       [translate]="
         'chat-component.' + disasterTypeName + '.active-event.instruction'
           | translate
