feat: update switch btn copy AB#19425

--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -6,11 +6,7 @@
         [innerHtml]="
           'chat-component.' +
             disasterTypeName +
-            '.event-switcher.current-event-message'
-            | translate
-              : {
-                  eventName: event?.eventName
-                }
+            '.event-switcher.current-event-message' | translate
         "
       ></strong>
     </p>
@@ -53,11 +49,7 @@
         [innerHtml]="
           'chat-component.' +
             disasterTypeName +
-            '.event-switcher.switch-event-button'
-            | translate
-              : {
-                  eventName: event?.eventName
-                }
+            '.event-switcher.switch-event-button' | translate
         "
       ></span>
       <ion-icon name="arrow-forward" slot="end"></ion-icon>
