--- a/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/date-button/date-button.component.scss
@@ -8,3 +8,12 @@
 .hour {
   font-size: 10px;
 }
+
+.date-text {
+  float: left;
+}
+
+.warning-icon {
+  vertical-align: middle;
+  margin-left: 5px;
+}
