feat: hide action summary if 0 actions AB#19426

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventState?.thresholdReached">
+<ng-container *ngIf="eventState?.thresholdReached && showAreasOfFocusSummary()">
   <ion-row
     class="component-title"
     color="ibf-secondary"
