feat: add eventName to aggregates header AB#19424

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -15,13 +15,13 @@
             <ion-label color="ibf-black"
               ><ion-text
                 ><strong>{{
-                  getLabelAreasExposed().headerLabel
+                  getAggregatesHeader().headerLabel
                 }}</strong></ion-text
               ></ion-label
             >
             <ion-label color="ibf-black"
               ><ion-text
-                [innerHTML]="getLabelAreasExposed().subHeaderLabel"
+                [innerHTML]="getAggregatesHeader().subHeaderLabel"
               ></ion-text
             ></ion-label> </ion-col
           >`
