feat: update middle column bg AB#19455

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -137,7 +137,7 @@
               sizeXl="3"
               class="ibf-dashboard-right-column-left-sub-column"
             >
-              <ion-content color="ibf-tertiary">
+              <ion-content>
                 <ion-grid
                   class="ibf-dashboard-right-column-left-sub-column-grid ion-justify-content-between ion-no-padding"
                 >
