feat: update aof design AB#19455

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -38,11 +38,7 @@
       </ion-col>
     </ion-row>
     <div data-test="aggregate-list">
-      <ion-row
-        *ngFor="let indicator of indicators"
-        class="ion-no-padding"
-        color="ibf-white"
-      >
+      <ion-row *ngFor="let indicator of indicators" class="ion-no-padding">
         <ion-col size-lg="7" size-md="7" size-xs="7">
           <ion-item class="aggregate-item ion-no-padding" color="ibf-white">
             <ion-thumbnail slot="start" class="aggregate-item-thumbnail">
