--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -23,17 +23,19 @@
 .areas-of-focus-item-information-icon {
   --min-height: 2rem;
   height: 2rem;
-  --inner-padding-end: 0;
 }
 
 .areas-of-focus-item {
+  --inner-padding-end: 0;
+
   .areas-of-focus-item-thumbnail {
-    background: var(--ion-color-ibf-tertiary);
-    border: 0.2rem solid var(--ion-color-ibf-tertiary);
+    background: var(--fiveten-neutral-100);
+    border: 0.2rem solid var(--fiveten-neutral-100);
     width: 2rem;
     height: 2rem;
     align-self: start;
     margin: 0px !important;
+    padding: 2px;
 
     ion-img {
       object-fit: contain;
@@ -43,7 +45,6 @@
   .areas-of-focus-item-label {
     text-transform: capitalize;
     line-height: 1.2;
-    padding: 4px 4px;
     font-size: 12px;
     margin: 0px !important;
     white-space: normal !important;
@@ -52,14 +53,12 @@
 }
 
 .areas-of-focus-item-value {
+  --background: var(--fiveten-neutral-100);
+
   ion-label {
     margin: 0px !important;
     font-size: 12px;
     white-space: normal !important;
-  }
-
-  span {
-    font-size: 12px;
   }
 }
 
